[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qcvt"
version = "0.1.0"
description = "QICK pulse schedule visualizer and edge-matrix exporter for asm_v2 programs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "QCVT contributors" }]
keywords = ["qick", "rfsoc", "quantum", "pulse", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "matplotlib>=3.5",
    "numpy>=1.20",
    "pandas>=1.3",
]

[project.optional-dependencies]
qick = ["qick"]
dev = ["pytest>=7", "cloudpickle"]

[project.urls]
Homepage = "https://github.com/your-org/QCVT"
Repository = "https://github.com/your-org/QCVT"
Documentation = "https://github.com/your-org/QCVT#readme"

[project.scripts]
qcvt = "qcvt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
